# PropCryptoAuth

./: .gitignore  .gitmodules  CMakeLists.txt
demo/: CMakeLists.txt  CryptoDevice.h  atca_hal_prop.cpp  authtypes.h  common.cpp  common.h  cryptoauth_demo.cpp  i2c_discover_devices.c
